--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-medium-image-zoom": "^5.1.3",
+    "swiper": "^9.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
