--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.0.1",
     "axios": "^1.3.4",
+    "firebase": "^9.19.1",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
-    "react-medium-image-zoom": "^5.1.3",
-    "swiper": "^9.2.0"
+    "react-quill": "^2.0.0",
+    "react-toastify": "^9.1.2",
+    "swiper": "^9.2.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
