--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.0.1",
     "axios": "^1.3.4",
     "firebase": "^9.19.1",
+    "moment": "^2.29.4",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
